--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,7 @@
 {
+  "resolveJsonModule": true,
+"esModuleInterop": true,
+"allowSyntheticDefaultImports": true,
   "compileOnSave": false,
   "compilerOptions": {
     "baseUrl": "./",
@@ -24,4 +27,5 @@
     "fullTemplateTypeCheck": true,
     "strictInjectionParameters": true
   }
+  
 }
