--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "rxjs": "~7.5.0",
+    "rxjs-tslint": "^0.1.8",
     "tslib": "^2.3.0",
+    "tslint": "^5.0.0",
+    "typescript": "^4.7.3",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
